# ClaimGuard-CXR

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_PATH_B.md  ARCHITECTURE_V2.md  ARCHITECTURE_V5_0_EVIDENCE_BLINDNESS.md  ARCHITECTURE_V5_IMAGE_GROUNDED.md  ARCHITECTURE_V6_0_NEURIPS_MAIN.md  CLAIMGUARD_PROPOSAL.md  HACKATHON_PLAN.md  HANDOFF_CLAIMGUARD_V3_SPRINT_COMPLETE_2026-04-15.md  HANDOFF_CLAIMGUARD_V6_2026-04-19.md  HANDOFF_CLAIMGUARD_V6_2026-04-20.md  HANDOFF_ClaimGuard_Improvements_2026-04-14.md  HANDOFF_ClaimGuard_Improvements_2026-04-14_RESUME_PROMPT.md  HANDOFF_TASK9_REAL_DUAL_RUN_2026-04-15.md  MANUSCRIPT_MINI.md  MANUSCRIPT_PATH_B.md  PATH_B_STATUS_2026-04-17.md  PLAN_V6_17DAY_NEURIPS.md  REPRODUCIBILITY.md  RUNBOOK_V5.md  WAKEUP_API_KEY_INVALID_2026-04-15.md  WAKEUP_STATUS_2026-04-15.md  decisions.md  index.html  progress.md  requirements.txt
claimguard_nmi/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
claimguard_nmi/baselines/: __init__.py  registry.py
claimguard_nmi/configs/: datasets.yaml  model.yaml  ontology.yaml
claimguard_nmi/conformal/: __init__.py  inverted_cfbh.py  weighted_cfbh.py
claimguard_nmi/data/: __init__.py  ontology_mapping.py
claimguard_nmi/eval/: __init__.py  metrics.py  runner.py
claimguard_nmi/extraction/: __init__.py  claim_extractor.py
claimguard_nmi/fairness/: __init__.py  decision_curve.py  subgroup.py
claimguard_nmi/grounding/: __init__.py  claim_schema.py  grounding.py
claimguard_nmi/models/: __init__.py  image_grounded_verifier.py
claimguard_nmi/provenance/: __init__.py  gate.py
claimguard_nmi/tests/: test_baselines.py  test_conformal.py  test_contrastive_loss.py  test_extraction.py  test_fairness.py  test_four_way_dataset.py  test_grounding.py  test_loaders.py  test_metrics.py  test_ontology_mapping.py  test_provenance.py  test_wave2_regressions.py
claimguard_nmi/training/: __init__.py  contrastive_loss.py  four_way_dataset.py
configs/: conformal.yaml  (+4 more)
(+245 files in other folders)
